guild shop's potions

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13076,6 +13076,1149 @@
         "th":"",
         "id":""
     },
+    "item.7400.name":{
+		"en":"Attack Potion Lvl 1",
+		"fr":"Potion d'Attaque Nv 1",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7401.name":{
+		"en":"Attack Potion Lvl 2",
+		"fr":"Potion d'Attaque Nv 2",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7402.name":{
+		"en":"Attack Potion Lvl 3",
+		"fr":"Potion d'Attaque Nv 3",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7403.name":{
+		"en":"Attack Potion Lvl 4",
+		"fr":"Potion d'Attaque Nv 4",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7404.name":{
+		"en":"Attack Potion Lvl 5",
+		"fr":"Potion d'Attaque Nv 5",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7405.name":{
+		"en":"Attack Potion Lvl 6",
+		"fr":"Potion d'Attaque Nv 6",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7406.name":{
+		"en":"Attack Potion Lvl 7",
+		"fr":"Potion d'Attaque Nv 7",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7407.name":{
+		"en":"Attack Potion Lvl 8",
+		"fr":"Potion d'Attaque Nv 8",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7408.name":{
+		"en":"Attack Potion Lvl 9",
+		"fr":"Potion d'Attaque Nv 9",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7409.name":{
+		"en":"Attack Potion Lvl 10",
+		"fr":"Potion d'Attaque Nv 10",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7410.name":{
+		"en":"Attack Potion Lvl 11",
+		"fr":"Potion d'Attaque Nv 11",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7411.name":{
+		"en":"Attack Potion Lvl 12",
+		"fr":"Potion d'Attaque Nv 12",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7412.name":{
+		"en":"Attack Potion Lvl 13",
+		"fr":"Potion d'Attaque Nv 13",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7413.name":{
+		"en":"Attack Potion Lvl 14",
+		"fr":"Potion d'Attaque Nv 14",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7414.name":{
+		"en":"Attack Potion Lvl 15",
+		"fr":"Potion d'Attaque Nv 15",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	
+	"item.7415.name":{
+		"en":"Defence Potion Lvl 1",
+		"fr":"Potion de Défense Nv 1",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7416.name":{
+		"en":"Defence Potion Lvl 2",
+		"fr":"Potion de Défense Nv 2",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7417.name":{
+		"en":"Defence Potion Lvl 3",
+		"fr":"Potion de Défense Nv 3",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7418.name":{
+		"en":"Defence Potion Lvl 4",
+		"fr":"Potion de Défense Nv 4",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7419.name":{
+		"en":"Defence Potion Lvl 5",
+		"fr":"Potion de Défense Nv 5",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7420.name":{
+		"en":"Defence Potion Lvl 6",
+		"fr":"Potion de Défense Nv 6",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7421.name":{
+		"en":"Defence Potion Lvl 7",
+		"fr":"Potion de Défense Nv 7",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7422.name":{
+		"en":"Defence Potion Lvl 8",
+		"fr":"Potion de Défense Nv 8",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7423.name":{
+		"en":"Defence Potion Lvl 9",
+		"fr":"Potion de Défense Nv 9",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7424.name":{
+		"en":"Defence Potion Lvl 10",
+		"fr":"Potion de Défense Nv 10",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7425.name":{
+		"en":"Defence Potion Lvl 11",
+		"fr":"Potion de Défense Nv 11",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7426.name":{
+		"en":"Defence Potion Lvl 12",
+		"fr":"Potion de Défense Nv 12",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7427.name":{
+		"en":"Defence Potion Lvl 13",
+		"fr":"Potion de Défense Nv 13",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7428.name":{
+		"en":"Defence Potion Lvl 14",
+		"fr":"Potion de Défense Nv 14",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7429.name":{
+		"en":"Defence Potion Lvl 15",
+		"fr":"Potion de Défense Nv 15",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	
+	"item.7430.name":{
+		"en":"Holy Potion Lvl 1",
+		"fr":"Potion Sacrée Nv 1",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7431.name":{
+		"en":"Holy Potion Lvl 2",
+		"fr":"Potion Sacrée Nv 2",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7432.name":{
+		"en":"Holy Potion Lvl 3",
+		"fr":"Potion Sacrée Nv 3",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7433.name":{
+		"en":"Holy Potion Lvl 4",
+		"fr":"Potion Sacrée Nv 4",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7434.name":{
+		"en":"Holy Potion Lvl 5",
+		"fr":"Potion Sacrée Nv 5",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7435.name":{
+		"en":"Holy Potion Lvl 6",
+		"fr":"Potion Sacrée Nv 6",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7436.name":{
+		"en":"Holy Potion Lvl 7",
+		"fr":"Potion Sacrée Nv 7",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7437.name":{
+		"en":"Holy Potion Lvl 8",
+		"fr":"Potion Sacrée Nv 8",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7438.name":{
+		"en":"Holy Potion Lvl 9",
+		"fr":"Potion Sacrée Nv 9",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7439.name":{
+		"en":"Holy Potion Lvl 10",
+		"fr":"Potion Sacrée Nv 10",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7440.name":{
+		"en":"Holy Potion Lvl 11",
+		"fr":"Potion Sacrée Nv 11",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7441.name":{
+		"en":"Holy Potion Lvl 12",
+		"fr":"Potion Sacrée Nv 12",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7442.name":{
+		"en":"Holy Potion Lvl 13",
+		"fr":"Potion Sacrée Nv 13",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7443.name":{
+		"en":"Holy Potion Lvl 14",
+		"fr":"Potion Sacrée Nv 14",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7444.name":{
+		"en":"Holy Potion Lvl 15",
+		"fr":"Potion Sacrée Nv 15",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	
+	"item.7430.name":{
+		"en":"Titan Potion Lvl 1",
+		"fr":"Potion de Titan Nv 1",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7431.name":{
+		"en":"Titan Potion Lvl 2",
+		"fr":"Potion de Titan Nv 2",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7432.name":{
+		"en":"Titan Potion Lvl 3",
+		"fr":"Potion de Titan Nv 3",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7433.name":{
+		"en":"Titan Potion Lvl 4",
+		"fr":"Potion de Titan Nv 4",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7434.name":{
+		"en":"Titan Potion Lvl 5",
+		"fr":"Potion de Titan Nv 5",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7435.name":{
+		"en":"Titan Potion Lvl 6",
+		"fr":"Potion de Titan Nv 6",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7436.name":{
+		"en":"Titan Potion Lvl 7",
+		"fr":"Potion de Titan Nv 7",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7437.name":{
+		"en":"Titan Potion Lvl 8",
+		"fr":"Potion de Titan Nv 8",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7438.name":{
+		"en":"Titan Potion Lvl 9",
+		"fr":"Potion de Titan Nv 9",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7439.name":{
+		"en":"Titan Potion Lvl 10",
+		"fr":"Potion de Titan Nv 10",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7440.name":{
+		"en":"Titan Potion Lvl 11",
+		"fr":"Potion de Titan Nv 11",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7441.name":{
+		"en":"Titan Potion Lvl 12",
+		"fr":"Potion de Titan Nv 12",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7442.name":{
+		"en":"Titan Potion Lvl 13",
+		"fr":"Potion de Titan Nv 13",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7443.name":{
+		"en":"Titan Potion Lvl 14",
+		"fr":"Potion de Titan Nv 14",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.7444.name":{
+		"en":"Titan Potion Lvl 15",
+		"fr":"Potion de Titan Nv 15",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
     "item.10001.name":{
         "en":"Yellow Celebeam Powder",
         "fr":"Poudre de Celebeam Jaune",
