added config lines

--- a/Translation/config.json
+++ b/Translation/config.json
@@ -56,6 +56,120 @@
         "th":"",
         "id":""
     },
+	"config.graphics.hide-mounts":{
+        "en":"Hide all mounts",
+        "fr":"Cacher toutes les montures",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"config.graphics.hide-wings":{
+        "en":"Hide all wings",
+        "fr":"Cacher toutes les ailes",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"config.graphics.render-dmg.normal.normal":{
+        "en":"Render damages",
+        "fr":"Afficher les dégâts",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"config.graphics.render-dmg.normal.critic":{
+        "en":"Render critical damages",
+        "fr":"Afficher les dégâts critiques",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"config.graphics.render-dmg.element.normal":{
+        "en":"Render element damages",
+        "fr":"Afficher les dégâts élémentaires",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"config.graphics.render-dmg.element.critic":{
+        "en":"Render critical element damages",
+        "fr":"Afficher les dégâts critiques élémentaires",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "config.sound.volume.ambient":{
         "en":"Volume of ambience",
         "fr":"Volume des musiques d'ambiances",
