--- a/Translation/config.json
+++ b/Translation/config.json
@@ -170,6 +170,25 @@
         "th":"",
         "id":""
     },
+	"config.graphics.render-dmg.only-self":{
+        "en":"Only render your damages",
+        "fr":"Afficher seulement ses propre dégâts",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "config.sound.volume.ambient":{
         "en":"Volume of ambience",
         "fr":"Volume des musiques d'ambiances",
