--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8979,7 +8979,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Logs",
         "ar":"",
         "it":"",
         "pl":"",
