--- a/Translation/config.json
+++ b/Translation/config.json
@@ -49,7 +49,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giao Diện Người Dùng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -68,7 +68,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giấu tất cả thú cưỡi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -87,7 +87,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giấu tất cả cánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -106,7 +106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiện sát thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -125,7 +125,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiện sát thương bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -144,7 +144,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiện sát thương nguyên tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -163,7 +163,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiện sát thương nguyên tố bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -182,7 +182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ hiện sát thương của bạn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -239,7 +239,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Số lượng dòng lưu tối đa trong Logs",
         "ar":"",
         "it":"",
         "pl":"",
