--- a/Translation/item.json
+++ b/Translation/item.json
@@ -22094,6 +22094,25 @@
         "th":"",
         "id":""
     },
+    "item.41027.name":{
+        "en":"Essence Shard",
+        "fr":"Éclat d'essence",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.70000.name":{
         "en":"Floating Rock - I",
         "fr":"Rocher Volant - I",
