--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11062,6 +11062,44 @@
         "th":"",
         "id":""
     },
+    "item.5054.name":{
+        "en":"Nightwatcher M",
+        "fr":"Veilleur de nuit",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5055.name":{
+        "en":"Nightwatcher F",
+        "fr":"Veilleuse de nuit",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name":{
         "en":"Initlal Hairstyle (Green)",
         "fr":"Coiffure Initiale (Vert)",
