--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2785,7 +2785,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3014,7 +3014,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"{0} Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5313,7 +5313,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hoạt Động Trực Tuyến",
+        "vi":"Sự Kiện Trực Tuyến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5332,7 +5332,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hoạt Động Hôm Nay",
+        "vi":"Sự Kiện Hôm Nay",
         "ar":"",
         "it":"",
         "pl":"",
