--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11074,7 +11074,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dạ Bảo M",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11093,7 +11093,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dạ Bảo F",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22144,7 +22144,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mảnh Tinh Chất",
         "ar":"",
         "it":"",
         "pl":"",
