--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1556,5 +1556,43 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.upgrade":{
+        "en":"Upgrade",
+        "fr":"Améliorer",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.unlock":{
+        "en":"Unlock",
+        "fr":"Débloquer",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
