--- a/Translation/item.json
+++ b/Translation/item.json
@@ -22151,6 +22151,63 @@
         "th":"",
         "id":""
     },
+    "item.41028.name":{
+        "en":"Valor Crystal",
+        "fr":"Crystal du Valeureux",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41029.name":{
+        "en":"Valor Refine Crystal",
+        "fr":"Crystal d'Affinage Valeureux",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41029.name":{
+        "en":"Essence Shard",
+        "fr":"Éclat d'essence",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Mảnh Tinh Chất",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.70000.name":{
         "en":"Floating Rock - I",
         "fr":"Rocher Volant - I",
