--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1899,6 +1899,44 @@
         "th":"",
         "id":"Keberanian"
     },
+    "UI.windows.character.valor.basic-stats":{
+        "en":"Basic Stats",
+        "fr":"Stat de Base",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.character.valor.bonus-stats":{
+        "en":"Bonus Stats",
+        "fr":"Stat Bonus",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.bag.title":{
         "en":"Bag",
         "fr":"Sac à Dos",
