--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1854,7 +1854,7 @@
         "de":"Tapferkeit",
         "jp":"",
         "pt":"",
-        "vi":"Dũng Sĩ",
+        "vi":"Anh Dũng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1892,7 +1892,7 @@
         "de":"Tapferkeit",
         "jp":"",
         "pt":"",
-        "vi":"Dũng Sĩ",
+        "vi":"Anh Dũng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1911,7 +1911,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ Sổ Cơ Bản",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1930,7 +1930,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ Số Cộng Thêm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1949,7 +1949,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tốn: {0} Pha Lê Tẩy Chất Anh Dũng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1968,7 +1968,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tẩy",
+        "vi":"Tẩy Chất",
         "ar":"",
         "it":"",
         "pl":"",
