--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1569,7 +1569,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nâng Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1588,7 +1588,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mở Khóa",
         "ar":"",
         "it":"",
         "pl":"",
