--- a/Translation/item.json
+++ b/Translation/item.json
@@ -21954,7 +21954,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Kỹ Năng Nâng Cao",
+        "vi":"Ngọc Kỹ Năng Bậc Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -21992,7 +21992,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 1-30]",
+        "vi":"Ngọc Nâng Cấp Bậc Cao [Cấp 1-30]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22011,7 +22011,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 40]",
+        "vi":"Ngọc Nâng Cấp Bậc Cao [Cấp 40]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22030,7 +22030,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 50]",
+        "vi":"Ngọc Nâng Cấp Bậc Cao [Cấp 50]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22049,7 +22049,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 60]",
+        "vi":"Ngọc Nâng Cấp Bậc Cao [Cấp 60]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22068,7 +22068,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 70-100]",
+        "vi":"Ngọc Nâng Cấp Bậc Cao [Cấp 70-100]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22106,7 +22106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Khảm Cánh Nâng Cao",
+        "vi":"Ngọc Khảm Cánh Bậc Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22125,7 +22125,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Tiến Hóa Thú Nâng Cao",
+        "vi":"Ngọc Tiến Hóa Thú Bậc Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22163,7 +22163,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pha Lê Anh Dũng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22182,7 +22182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pha Lê Tẩy Chất Anh Dũng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27817,7 +27817,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Cấp 1-30]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 5000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 1-30]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 5000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27894,7 +27894,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 40] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Cấp 40]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 6000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 40] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 40]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 6000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27971,7 +27971,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Cấp 50]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 8000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 5<br> - Ngọc Nâng Cấp Bậc Cao [Cấp 50]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 8000",
         "ar":"",
         "it":"",
         "pl":"",
